tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier0StoneAge-AAAAAAAAAAAAAAAAAAAAAQ==__RareOres-AAAAAAAAAAAAAAAAAAAGCg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1546,
  "prerequisites": [
    1504
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Did you look for days to find Diamonds, Redstone, Tantalite, Certus Quartz, or Mica?\n\nWell for a few mixes you can use different ores like Coal for Diamond Vein or Quartzite Ore for Certus Quartz Vein. Mica ore mix can be found if you have Cassiterite Ore, but not the Cassiterite Sand.\n\nTetrahedrite in the nether can be found with copper ore.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§2§lRare Ores",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1504
  ],
  "rewards": [],
  "tasks": []
}
