tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier0StoneAge-AAAAAAAAAAAAAAAAAAAAAQ==__RedstoneEarlyGam-AAAAAAAAAAAAAAAAAAACFw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 535,
  "prerequisites": [
    36,
    494
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Are you wondering how to process raw redstone ore without a macerator?\n\nUse the hammer in the crafting table to get some crushed redstone ore from your raw redstone ore. After that, use the hammer in the crafting table again to get some impure redstone dust.\n\nLastly, fill a cauldron with water and drop the whole stack of dust into it, either manually or by pressing Ctrl+Q. The cauldron can handle the entire stack with the same amount of water. You will get pure redstone dust for your redstone needs.\n\n§3You could also take the hammer with you on your mining trip and break the redstone ore with it directly to get crushed redstone ore, thus skipping the raw redstone ore.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§2§lRedstone, Early Game Processing",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    36,
    494
  ],
  "rewards": [],
  "tasks": []
}
