tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier0StoneAge-AAAAAAAAAAAAAAAAAAAAAQ==__SleepingOutside-AAAAAAAAAAAAAAAAAAAB6w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 491,
  "prerequisites": [
    486
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Carrying the bed with you all the time looks very funny. Why don't you craft a sleeping bag to stay outside without placing a bed and changing your spawn point? This way if you die, you'll be right at home!",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§2§lSleeping Outside",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    486
  ],
  "rewards": [],
  "tasks": []
}
