tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier0StoneAge-AAAAAAAAAAAAAAAAAAAAAQ==__StickaFingerinth-AAAAAAAAAAAAAAAAAAAHOw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1851,
  "prerequisites": [
    1831
  ],
  "properties": {
    "auto_claim": false,
    "desc": "But you really do care. Trying to find a good place to locate a windmill? You could just build one and see, or try this fancy windsock.\n\nPaper rotors are great in low winds.\nWool rotors are cheap.\nLeather rotors are durable.\n\nDon't leave the rotors in the windmill when you aren't using it, it will use up durability.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§2§lStick a Finger in the Air",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1831
  ],
  "rewards": [],
  "tasks": []
}
