tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier0StoneAge-AAAAAAAAAAAAAAAAAAAAAQ==__SustainablePaper-bbaqMVmnQFyjDT-CHJKqQQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 6460202954846808641,
  "prerequisites": [
    32
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Now that you got your first paper, it's time for a better way to get more. With paperbark you can do just that.\n\nOnce grown you can obtain paper by right-clicking the logs of the tree. The bark regrows in due time.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Sustainable Paper",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    32
  ],
  "rewards": [],
  "tasks": []
}
